--- a/location.htm
+++ b/location.htm
@@ -54,7 +54,7 @@
           <div class="text">Just Book & Go</div>
         </div>
   </div>
-  <script src="slideshow.js"></script>
+  <script src="javascript/slideshow.js"></script>
        <div id="main" style="height: fit-content;">
          <center>
            <h2 style="font-family: 'Courier New', Courier, monospace; font-weight: 1000; font-size: 30px;">Popular Locations</h2>
