--- a/index.htm
+++ b/index.htm
@@ -120,7 +120,7 @@
                 <div class="flip-card">
                   <div class="flip-card-inner">
                     <div class="flip-card-front">
-                      <img src="images\Noida.jpg" alt="Avatar" style="width:200px;height:200px;border-radius: 10px;">
+                      <img src="images\noida.jpg" alt="Avatar" style="width:200px;height:200px;border-radius: 10px;">
                       <div class="text">Noida</div>
                     </div>
                     <div class="flip-card-back">
