--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,7 @@
 <html>
   <head>
     <link rel="icon" href="images\icon.png" type="image/icon type">
+    <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/srylesheet.css">
     <script src="javascript/work.js"></script>
     <title>Book & Go</title>
